--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.16"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "vuejs-countdown": "^0.2.1"
     }
 }
