--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
-        "vuejs-countdown": "^0.2.1"
+        "luxon": "^1.2.0",
+        "vue-datetime": "^1.0.0-beta.3",
+        "vuejs-countdown": "^0.2.1",
+        "weekstart": "^1.0.0"
     }
 }
