--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.16"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.9",
         "font-awesome": "^4.7.0",
         "luxon": "^1.2.0",
         "vue-datetime": "^1.0.0-beta.3",
