--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.3.5",
         "luxon": "^1.2.0",
+        "moment": "^2.22.2",
         "pusher-js": "^4.2.2",
         "vue-datetime": "^1.0.0-beta.3",
         "vuejs-countdown": "^0.2.1",
