--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.16"
     },
     "dependencies": {
+        "@tinymce/tinymce-vue": "^1.0.8",
         "bootstrap-vue": "^2.0.0-rc.9",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.3.5",
