--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@tinymce/tinymce-vue": "^1.0.8",
         "bootstrap-vue": "^2.0.0-rc.9",
         "font-awesome": "^4.7.0",
+        "jquery-ui": "^1.12.1",
+        "jquery-ui-bundle": "^1.12.1-migrate",
         "laravel-echo": "^1.3.5",
         "luxon": "^1.2.0",
         "moment": "^2.22.2",
