--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
+        "lodash": "^4.17.10",
         "popper.js": "^1.12",
         "vue": "^2.5.16"
     },
     "dependencies": {
         "@tinymce/tinymce-vue": "^1.0.8",
         "bootstrap-vue": "^2.0.0-rc.9",
+        "compass": "^0.1.1",
         "font-awesome": "^4.7.0",
+        "gridstack": "^0.4.0",
         "jquery-ui": "^1.12.1",
         "jquery-ui-bundle": "^1.12.1-migrate",
         "laravel-echo": "^1.3.5",
