--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
+    "/js/summary.js": "/js/summary.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/summary.css": "/css/summary.css",
-    "/js/summary.js": "/js/summary.js"
+    "/css/summary.css": "/css/summary.css"
 }
