--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/summary.css": "/css/summary.css",
-    "/js/summary.js": "/js/summary.js"
+    "/css/landing.css": "/css/landing.css",
+    "/js/summary.js": "/js/summary.js",
+    "/js/landing.js": "/js/landing.js"
 }
